<resources>
    <string name="app_name">TelrGateway</string>
    <string name="service_desc">Telr Payment Service</string>
    <string name="aid_description">Customer App</string>
    <string name="nothing_selected">Please select payment method.</string>
    <string name="tap_and_pay">Please hold your card or mobile phone on back side of this device to pay.</string>
    <string name="share_pay">Open \'Artha-Pay\' application</string>
    <string name="label_btn_cancel">Cancel Transaction</string>
    <string name="label_btn_proceed">Proceed</string>
    <string name="label_btn_change_payment">Change Payment Method</string>
    <string name="label_enter_pin"> Login with your UPI pin</string>

    <string name="tv_noNfc">There is no NFC module on this device</string>
    <string name="tv_tap_your_card">Please put your card to back panel of the phone</string>
    <string name="ad_progressBar_title">Scanning ...</string>
    <string name="ad_progressBar_mess">Please do not remove or move card during reading.</string>
    <string name="snack_unknown_bank_card">This is unknown bank card. Please, go to my github repo!</string>
    <string name="snack_doNotMoveCard">Please do not move card, try again !</string>
    <string name="snack_unknownEmv">Unknown EMV card</string>
    <string name="snack_lockedNfcCard">NFC is locked on this card.</string>
    <string name="ad_nfcTurnOn_title">NFC is turned off.</string>
    <string name="ad_nfcTurnOn_message">You need turn on NFC module for scanning. Wish turn on it now?</string>
    <string name="ad_nfcTurnOn_pos">Turn on</string>
    <string name="ad_nfcTurnOn_neg">Dismiss</string>
    <string name="network_error_message">Something went wrong, please check the network setting and try again.</string>
    <string name="transaction_processing_message">Transaction is processing, please retry to check status.</string>
    <string name="label_order_processing">Order is processing</string>
    <string name="label_transaction_processing">Transaction is processing</string>

    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="label_do_not_press_back">Please do not press the back button until the transactions has been complete</string>
    <string name="dot_uni_codes">••••••</string>

    <string name="label_txn_reference">TRANSACTION REFERENCE</string>
    <string name="label_invoice_number">INVOICE NUMBER</string>
    <string name="label_txn_type">TRANSACTION TYPE</string>
    <string name="label_txn_amount">AMOUNT</string>
    <string name="label_txn_status">STATUS</string>
    <string name="label_txn_description">DESCRIPTION</string>
    <string name="label_txn_time">TIME(UTC)</string>
    <string name="label_auth_code">AUTHORISATION CODE</string>
    <string name="label_card">CARD</string>
    <string name="label_email_address">EMAIL ADDRESS</string>
    <string name="label_phone_number">PHONE NUMBER</string>
    <string name="label_country">COUNTRY</string>


    <string name="label_vendor_name">Vendor Name</string>
    <string name="label_mobile">Mobile</string>
    <string name="label_product_name">Product Name</string>
    <string name="label_product_price">Product Price</string>
    <string name="label_order_id">Order Id</string>
    <string name="label_order_failed_retry">Payment is  not able to process at this time!, Please try after sometime</string>
    <string name="label_order_failed">Payment failed! please try again</string>
    <string name="label_txn_success">Transaction is successful!</string>
    <string name="label_payment_information">Payment Information</string>
    <string name="label_transaction_id">Transaction Id</string>

    <string name="label_done">Done</string>
    <string name="label_pay_to">Pay To</string>
    <string name="hint_payment_desc">Description</string>
    <string name="label_secure_by">Secure By Telr</string>
</resources>