<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.ProcessingPaymentActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvSecureByTelr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_baseline_secure_24"
            android:drawablePadding="10dp"
            android:gravity="center|start"
            android:padding="0dp"
            android:text="@string/label_secure_by"
            android:textAllCaps="true" />

        <View
            android:layout_below="@+id/tvSecureByTelr"
            android:layout_width="match_parent"
            android:background="@color/gray_btn_bg_color"
            android:layout_height="1dp" />

        <LinearLayout
            android:id="@+id/txnProgressLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

<!--            <ProgressBar-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content" />-->

            <com.ulisfintech.telrpay.helper.GifImageView
                android:id="@+id/gifImage"
                android:layout_width="10dp"
                android:layout_height="10dp"
                app:src="@drawable/money_flow" />

            <TextView
                android:id="@+id/tvPaymentStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="18"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/label_order_processing" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txnProgressLayout"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnDonePayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/btn_selector"
                android:text="@string/label_done" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/label_do_not_press_back" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>